[package]
name = "grarr2"
version = "0.1.0"
authors = ["Wim Looman <git@nemo157.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.1.8"
http-service = "0.5.0"
http-service-hyper = { git = "https://github.com/Nemo157/http-service-hyper", default-features = false }
http-types = "1.2.0"
anyhow = "1.0.31"
thiserror = "1.0.18"
displaydoc = "0.1.6"
futures = { version = "0.3.5", default-features = false }
